update SingleLinkedList